# Hackathon_II_Todo_App_Spec_Driven_Project

./: .gitignore  FIX_SUMMARY.md  README.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  debug_ai.py  final_test.py  package-lock.json  simple_test.py  temp_response.html  test_ai_chatbot.py  test_api.py  test_chatbot_functionality.py  test_connection.py  test_fix.py  test_functionality.py  test_models.py  test_task_functionality.py  verify_fix.py  verify_implementation.py
phase-5-cloud-deployment/backend/: Dockerfile  SECURITY_AUDIT.md  SLOWAPI_DEPLOYMENT_GUIDE.md  main.py  migrate_db.py  pyproject.toml  test_chatbot.py  test_db.py
phase-5-cloud-deployment/backend/ai_agent/: agent.py
phase-5-cloud-deployment/backend/mcp_server/: config.py
phase-5-cloud-deployment/backend/mcp_server/tools/: __init__.py  task_operations.py
phase-5-cloud-deployment/backend/notification-service/: Dockerfile  requirements.txt
phase-5-cloud-deployment/backend/notification-service/src/: main.py
phase-5-cloud-deployment/backend/reminder-service/: Dockerfile  requirements.txt
phase-5-cloud-deployment/backend/reminder-service/src/: main.py
phase-5-cloud-deployment/backend/scheduler-service/: Dockerfile  requirements.txt
phase-5-cloud-deployment/backend/scheduler-service/src/: main.py
phase-5-cloud-deployment/backend/src/: main.py
phase-5-cloud-deployment/backend/src/api/: chat_controller.py  tags.py  tasks.py
phase-5-cloud-deployment/backend/src/models/: __init__.py  conversation_model.py  tag_model.py  task_model.py
phase-5-cloud-deployment/backend/src/utils/: dapr_helper.py
(+386 files in other folders)
