[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-backend"
version = "0.1.0"
description = "Backend API for the Todo Full-Stack Web Application"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "sqlmodel>=0.0.16",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.29.0",
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "uvicorn[standard]>=0.24.0",
    "alembic>=1.13.1",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]